<resources>
    <string name="app_name">UserApp</string>

    <string name="logo_image_view">logo_image_view</string>
    <string name="grab_user_text">Grab User</string>
    <string name="hint_name">name</string>
    <string name="hint_email">email</string>
    <string name="hint_phone">phone</string>
    <string name="login_button_text">Login</string>
    <string name="code_vn">+84</string>
    <string name="test_name">doannd</string>
    <string name="test_email">nguyendinhdoanjdk@gmail.com</string>
    <string name="test_phone">0395616595</string>
    <string name="empty_name">name is required</string>
    <string name="email_invalid">email is invalid</string>
    <string name="phone_invalid">phone is invalid</string>
    <string name="instruction_text_view">Enter 6 digit code sent to</string>
    <string name="receive_text_view">Didn\'t receive it ?</string>
    <string name="time_out_text">Request a new code in %s</string>
    <string name="hint_code">000000</string>
    <string name="label_request_new_code">
    <![CDATA[
        <html>
            <body>
              <pre><u><font color="#4CAF50">Request new code</font></u></pre>
            </body>
        </html>
    ]]>
    </string>
    <string name="verification_code_button_text">Verification Code</string>
    <string name="phone_number">+ 84 %s</string>
    <string name="error_code">Enter a valid verification code</string>
    <string name="find_driver_button_text">Find Driver</string>
    <string name="title_of_you">You</string>
    <string name="you_are_online">You are online</string>
    <string name="you_are_offline">You are offline</string>
    <string name="go_button_text">Go</string>
    <string name="hint_destination">go…</string>
    <string name="pickup_location">Pickup location</string>
    <string name="user_cancel_operation">you cancel search destination address</string>
    <string name="please_change_state_you">Please change your status to online</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test">Map</string>
    <string name="hint_current_location">Current location</string>
    <string name="hint_go_location">I\'m going to…</string>
    <string name="up_image_view">up image view</string>
    <string name="pickup_request_button_text">Pickup Request</string>
    <string name="error_message">error occur</string>
    <string name="call_driver_button_text">Getting your driver…</string>
    <string name="driver_phone">phone: %s</string>
    <string name="call_driver_replace">Call Driver</string>
    <string name="notification_title">user call to driver</string>
    <string name="send_message_to_driver_error">call user failed</string>
    <string name="send_message_to_driver_success">Send message to driver success</string>
    <string name="no_driver">No available any driver near you</string>

    <string name="menu_history">History</string>
    <string name="menu_bill">Bill</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="icon_star">icon star</string>
    <string name="test_star">4.5</string>
    <string name="edit_profile">Update</string>
    <string name="permission_denied">permission_denied</string>
    <string name="update_infor_success">update infor success</string>
    <string name="update_infor_failed">update infor failed</string>
    <string name="edit_button_dialog">Edit</string>
    <string name="cancel_button_dialog">Cancel</string>
    <string name="error_upload_image">error upload image</string>
    <string name="upload_avatar_success">upload avatar success</string>
    <string name="upload_avatar_failed">upload avatar failed</string>
    <string name="call_details_text">Call Details</string>
    <string name="test_star_number">Star</string>
    <string name="test_name_driver">John Event</string>
    <string name="test_phone_driver">+84 0395616595</string>
    <string name="call_driver">call driver</string>
    <string name="driver_decline_request">DRIVER DECLINE</string>
    <string name="driver_accept_request">DRIVER ACCEPT</string>
    <string name="my_routes">My Routes</string>
    <string name="pickup_request">BOOK
    </string>
    <string name="price_text">VND: %sK</string>
    <string name="call_text">Calling…</string>
    <string name="find_icon">find icon</string>
    <string name="pick_up">PICK-UP</string>
    <string name="drop_off">DROP-OFF</string>
    <string name="icon_green">icon green</string>
    <string name="icon_blue">icon blue</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="please_enter_destination_address">Please enter destination address</string>
    <string name="request_text">The system is processing your request</string>
    <string name="state_not_working">not_working</string>
    <string name="message_user_cancel_booking">User cancel booking</string>
    <string name="sorry_the_driver_declined_your_request">Sorry! the driver declined your request</string>
    <string name="icon_cry">icon cry</string>
    <string name="title_activity_tracking">Map</string>
    <string name="the_driver_is_on_his_way_to_pick_you_up">The driver is on his way to pick you up</string>
    <string name="icon_phone">icon phone</string>
    <string name="driver_has_arrived">the driver has arrived</string>
    <string name="icon_tick">icon tick</string>
    <string name="yeah_the_driver_has_accepted_your_request">Yeah! The driver has accepted your request</string>
    <string name="cancel_trip_message">The driver has canceled the trip for some reason, please find another driver</string>
    <string name="intro_start_trip">We are on our way %s</string>
    <string name="end_game_text">End Game</string>
    <string name="close_image_view">close image view</string>
    <string name="sum_text">SUM</string>
    <string name="thank_you">Thank you your submit</string>
    <string name="trip_price_text">VND %sK</string>
    <string name="review_driver">Please review your driver</string>
    <string name="network_not_connect">Network not connect</string>

</resources>
