<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_place"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_start_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_blue"
            android:src="@drawable/ic_vertical_line_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_start_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:text="@string/pick_up"
                android:textColor="@color/edit_text_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pick_up_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                tools:text="Start " />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/iv_end_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_green"
            android:src="@drawable/ic_vertical_line_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_end_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:text="@string/drop_off"
                android:textColor="@color/edit_text_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_drop_off_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="18sp"
                tools:text="End" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>